# aoc2025

./: .gitignore  Makefile  README.md  _solution_template.py  pyproject.toml
day01/: solution.py
day02/: solution.py
day03/: solution.py
day04/: solution.py
day05/: solution.py
day06/: solution.py
day07/: solution.py
day08/: solution.py
day09/: solution.py
day10/: solution.py
day11/: sample.txt  solution.py
day12/: solution.py  z3_solver_opts.txt
