[project]
name = "aoc2025"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "z3-solver>=4.15.4.0",
]
[tool.ruff.lint]
ignore = [
    "E741", # Simple variable names like 'a', 'x', etc.
]
